--- a/src/themes/default/styles/component.layout.css
+++ b/src/themes/default/styles/component.layout.css
@@ -17,7 +17,7 @@ $header-height: 96px;
         height: $header-height;
         z-index: 6;
 
-        @media (--screen-to-sml) {
+        @media (--screen-to-lrg) {
             left: 0;
         }
     }
@@ -32,7 +32,7 @@ $header-height: 96px;
         background-color: $color-text;
         z-index: 9;
 
-        @media (--screen-from-sml) {
+        @media (--screen-from-lrg) {
             width: $aside-width;
         }
 
@@ -45,7 +45,7 @@ $header-height: 96px;
             background-color: $color-secondary;
             z-index: 99;
 
-            @media (--screen-from-sml) {
+            @media (--screen-from-lrg) {
                 top: $header-height;
                 left: $aside-width;
                 width: $aside-secondary-width;
@@ -55,7 +55,7 @@ $header-height: 96px;
 
         &.is-collapsed {
 
-            @media (--screen-from-sml) {
+            @media (--screen-from-lrg) {
                 width: $aside-sml-width;
 
                 .nav__text {
@@ -82,24 +82,24 @@ $header-height: 96px;
 
         &.is-collapsed {
 
-            @media (--screen-from-sml) {
+            @media (--screen-from-lrg) {
                 left: $aside-sml-width;
             }
 
             & .layout__header {
                 left: $aside-sml-width;
 
-                @media (--screen-to-sml) {
+                @media (--screen-to-lrg) {
                     left: 0;
                 } 
             }
         }
 
-        @media (--screen-to-lrg) {
+        @media (--screen-to-xxlrg) {
             padding: calc($unit * 3) calc($unit * 4);
         }
 
-        @media (--screen-from-sml) {
+        @media (--screen-from-lrg) {
             left: $aside-width;
         }
     }
@@ -110,6 +110,4 @@ $header-height: 96px;
         
         background-color: $grey-1;
     }
-
-
 }
